--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 @media (max-width: 600px) {
-  .container {
+  body {
     padding: 12px;
   }
 
@@ -11,6 +11,7 @@
     font-size: 16px;
   }
 }
+
 .card {
   background: white;
   border-radius: 12px;
@@ -23,7 +24,8 @@
   margin: 8px 0;
   font-size: 15px;
 }
-/* ===== KALENDER MASEHI ===== */
+
+/* Kalender */
 .kalender {
   display: grid;
   grid-template-columns: repeat(7, 1fr);
