--- a/style.css
+++ b/style.css
@@ -67,8 +67,12 @@
   background: #1b5e20;
 }
 @media (max-width: 600px) {
-  .kalender {
+  .calendar-wrapper {
     max-width: 100%;
+  }
+
+  #monthTitle {
+    font-size: 15px;
   }
 
   .kalender div {
@@ -76,10 +80,7 @@
     line-height: 32px;
     font-size: 13px;
   }
-}
-#monthTitle {
-  font-size: 16px;
-}
+
 /* Wrapper agar header & kalender sejajar */
 .calendar-wrapper {
   max-width: 420px;
